--- a/shard.yml
+++ b/shard.yml
@@ -31,7 +31,7 @@ targets:
 dependencies:
   lucky_cli:
     github: luckyframework/lucky_cli
-    version: ~> 0.13
+    version: 0.13.2
   habitat:
     github: luckyframework/habitat
     version: ~> 0.4
@@ -40,7 +40,7 @@ dependencies:
     version: ~> 0.2
   avram:
     github: luckyframework/avram
-    version: ~> 0.9
+    version: 0.9.4
   lucky_router:
     github: luckyframework/lucky_router
     version: ~> 0.2
@@ -60,6 +60,7 @@ dependencies:
 development_dependencies:
   ameba:
     github: veelenga/ameba
+    version: 0.9.0
 
 scripts:
   postinstall: script/precompile_tasks
